# tandem

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  QA.md  README.md  build.rs
.fp/: config.toml
.github/workflows/: release.yml
benches/: bench_support.rs  tcp_commit_path.rs  tcp_inflight_throughput.rs
crates/tandem-cli/: Cargo.toml
crates/tandem-cli/src/: alias.rs  clone.rs  content.rs  daemon.rs  lib.rs  link.rs  main.rs  offline.rs  presence.rs  repo.rs
crates/tandem-core/: Cargo.toml
crates/tandem-core/src/: content.rs  lib.rs  model.rs  object_store.rs  sync.rs  types.rs
crates/tandem-server/: Cargo.toml
crates/tandem-server/migrations/: 001_init.sql
crates/tandem-server/src/: auth.rs  authz.rs  db.rs  docs.rs  events.rs  main.rs  sync.rs
crates/tandem-server/src/handlers/: bookmarks.rs  changes.rs  content.rs  mod.rs  presence.rs  repos.rs
demos/: config.tape  tandem-exe-dev.tape
demos/scripts/: agent-a.sh  agent-b.sh  server-start.sh
docs/: README.md
docs/benchmarks/: tcp_commit_path_latest.json  tcp_inflight_throughput_latest.json
docs/design-docs/: core-beliefs.md  index.md  jj-lib-integration.md  rpc-error-model.md  rpc-protocol.md  server-lifecycle.md  transport-matrix.md  workflow.md
docs/exec-plans/: capnp-transport-tightening-review-notes.md  capnp-transport-tightening.md  tech-debt-tracker.md
docs/exec-plans/active/: server-lifecycle.md  slice-roadmap.md  workspace-collision-default-fix.md
docs/exec-plans/completed/: README.md  option-c-jj-lib-head-authority.md  server-lifecycle.md  slice-roadmap.md  slice1-single-agent-round-trip.md  slice2-two-agent-visibility.md  slice3-concurrent-convergence.md  slice4-promise-pipelining.md  slice5-watch-heads.md  slice6-git-round-trip.md  slice7-end-to-end.md  slice8-bookmark-management.md  slice9-cli-help.md  v0-prototype-slices.md  workspace-collision-default-fix.md
docs/product-specs/: core-product.md  index.md
qa/: README.md  REPORT.md  naive-agent-report.md  stress-report.md  workflow-eval-report.md
qa/v1/: REPORT.md  cross-machine-report.md
schema/: tandem.capnp
src/: api.rs  auth.rs  backend.rs  control.rs  logging.rs  main.rs  op_heads_store.rs  op_store.rs  proto_convert.rs  rpc.rs  server.rs  tandem_capnp.rs  watch.rs
tests/: slice10_graceful_shutdown.rs  slice11_control_socket.rs  slice12_up_down.rs  slice13_log_streaming.rs  slice14_auto_workspace_names.rs  slice15_head_authority_jj_lib.rs  slice16_integration_workspace_flag.rs  slice17_integration_conflict_visibility.rs  slice18_init_base_from_server_workspace.rs  slice18_repo_info_compat.rs  slice19_tcp_connector_parity.rs  slice1_single_agent_round_trip.rs  slice20_pipelining_correctness.rs  slice21_contention_retry_stability.rs  slice2_two_agent_visibility.rs  slice3_concurrent_convergence.rs  slice4_promise_pipelining.rs  slice5_watch_heads.rs  slice6_git_round_trip.rs  slice7_end_to_end.rs  v1_slice2_two_agent_visibility.rs
tests/common/: mod.rs
