[package]
name = "tandem-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jjf"
path = "src/main.rs"

[dependencies]
tandem-core.workspace = true

clap.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.17"
toml = "0.9.11"
chrono.workspace = true
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
url = "2.5.4"
tracing.workspace = true
reqwest = { version = "0.13.1", features = ["rustls-native-certs"] }
whoami = "2.0.2"
jj-lib = "0.37.0"
yrs.workspace = true
