[package]
name = "tandem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
yrs.workspace = true
hex.workspace = true
rand.workspace = true
base64.workspace = true
sha1 = "0.10.6"
