[package]
name = "tandem-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tandem-core.workspace = true

axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

chrono.workspace = true
rand.workspace = true
hex.workspace = true
uuid.workspace = true
thiserror = "2.0.17"
yrs.workspace = true
